# AsciiEngine

./: README.md  camera.py  main.py  objects.py  perspective.py  position.py  rotation.py  setup.cfg  window.py
_3d/: cube.py
src/: camera.py  gamemode.py  object.py  position.py  rotation.py  window.py
src/_2d/: line.py  parallelogram.py  rectangle.py  sprite.py  square.py  text.py
src/_3d/: cube.py
src/examples/: basic.py  runner.py  sprite.py
src/perspective/: flatPerspective.py  linearPerspective.py  perspective.py
src/utils/: fpsDisplay.py  logsDisplay.py
utils/: fpsDisplay.py  logsDisplay.py
