[metadata]
name = AsciiEngine
version = 0.1.0
author = Baleine
author_email = baleinesanguine@gmail.com
description = A console game engine built with curses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bqleine/AsciiEngine
project_urls =
  Bug Tracker = https://github.com/bqleine/AsciiEngine/issues
classifiers =
  Programming Language :: Python :: 3
  Operating System :: Posix
  Operating System :: MacOS
  Environment :: Console :: Curses

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
